# player_sdk

./: .gitignore  CMakeLists.txt  README.md  build.bat  run.bat
examples/: minimal_player.cpp
include/: smartplayer.h  smartplayercallback.h  smartplayerdefs.h
src/: smartplayer.cpp
src/converter/: videoconverter.cpp  videoconverter.h
src/core/: playercore.cpp  playercore.h  syncclock.h
src/decoder/: decoder.cpp  decoder.h
src/demuxer/: demuxer.cpp  demuxer.h
src/filter/: audiofilter.cpp  audiofilter.h
src/pool/: framepool.cpp  framepool.h  gloabalpool.h  packetpool.cpp  packetpool.h
src/queue/: avframequeue.cpp  avframequeue.h  avpacketqueue.cpp  avpacketqueue.h  avqueue.h
src/render/: audiooutput.cpp  audiooutput.h
src/resampler/: resampler.cpp  resampler.h
src/utils/: audioringbuffer.cpp  audioringbuffer.h  log.cpp  log.h
